# rust-training

./: .gitignore
crate_examples/: Cargo.toml
crate_examples/examples/: clap.rs  colored.rs  command.rs  comrak.rs  glob.rs  jsonxf.rs  percent_encoding.rs  plotly.rs  polars.rs  pulldown_cmark.rs  qrcode.rs  reqwest.rs  rustyline.rs  syntect.rs  termimad.rs
crate_examples/examples/proto/: abi.proto  main.rs
crate_examples/examples/yaml/: config.yaml  main.rs
crate_examples/src/: dag.rs  dag_mut.rs  main.rs
dioxus-demo/: Cargo.toml
dioxus-demo/src/: main.rs
gpt/: Cargo.toml  README.md
gpt-terminal/: Cargo.toml  README.md
gpt-terminal/examples/: block_client.rs  stream_client.rs
gpt-terminal/src/: lib.rs  main.rs
gpt-terminal/src/openai/: client.rs  message.rs  mod.rs
gpt/gpt/: Cargo.toml
gpt/gpt-desktop/: package.json  pnpm-lock.yaml  splashscreen.html  tailwind.config.js
gpt/gpt-desktop/prompts/: prompt_en.json  prompt_zh.json
gpt/gpt-desktop/src/: App.css  App.tsx
gpt/gpt-desktop/src-tauri/: Cargo.toml  tauri.conf.json
gpt/gpt-desktop/src-tauri/src/: main.rs
gpt/gpt-desktop/src/components/MessageBox/: index.css  index.tsx
gpt/gpt-desktop/src/components/PromptSelect/: index.css  index.tsx
gpt/gpt-desktop/src/configs/: index.ts
gpt/gpt-desktop/src/contexts/: chat.ts  global.ts
gpt/gpt-desktop/src/interfaces/: index.ts
gpt/gpt-desktop/src/lang/: en.json  zh.json
gpt/gpt-desktop/src/modules/Content/: MessageInput.tsx  index.tsx
gpt/gpt-desktop/src/modules/Sidebar/: RecordCard.tsx  index.css  index.tsx
gpt/gpt-desktop/src/pages/: chat.tsx
gpt/gpt-desktop/src/utils/: data.ts  i18.ts  index.ts  markdown.ts
gpt/gpt-py/: Cargo.toml  README.md
gpt/gpt-py/src/: lib.rs
gpt/gpt/examples/: block_client.rs  stream_client.rs
gpt/gpt/src/openai/: client.rs
httpie/: Cargo.toml
httpie/examples/: cli.rs  highlight.rs
httpie/src/: main.rs
kv/: Cargo.toml  abi.proto  build.rs
kv/src/storage/: mod.rs
my-llm-project/: Cargo.toml
my-llm-project/examples/: map_reduce_chain.rs  seq_chain.rs
my-llm-project/src/: main.rs
parser_json/: Cargo.toml
parser_json/src/: lib.rs
parser_json/src/nom/: mod.rs  nom.rs
parser_json/src/pest/: json.pest  pest.rs
queryer/: Cargo.toml
queryer/data-viewer/: README.md  package.json
queryer/data-viewer/src/: App.tsx
queryer/data-viewer/src-tauri/: Cargo.toml  tauri.conf.json
queryer/data-viewer/src-tauri/src/: main.rs
queryer/queryer/: Cargo.toml
queryer/queryer-py/: Cargo.toml
queryer/queryer-py/src/: lib.rs
queryer/queryer/examples/: covid.rs  dialect.rs  my_dialect.rs  polars.rs  ps.rs
queryer/queryer/src/: convert.rs  dialect.rs  fetcher.rs  lib.rs  loader.rs
rgrep/: Cargo.toml
rgrep/src/: main.rs
rgrep2/: Cargo.toml
rgrep2/src/: lib.rs  main.rs
thumbor/: Cargo.toml  build.rs
thumbor/src/: main.rs
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
