[package]
name = "crate_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "colored"
[[example]]
name = "quick"
[[example]]
name = "jsonxf"
[[example]]
name = "syntect"
[[example]]
name = "clap"




[dependencies]
anyhow = "1.0.69"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
syntect = "5.0.0"
thiserror = "1.0.39"

