[package]
name = "crate_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "colored"
[[example]]
name = "quick"
[[example]]
name = "jsonxf"
[[example]]
name = "syntect"
[[example]]
name = "clap"
[[example]]
name = "proto"
[[example]]
name = "command"
[[example]]
name = "polars"
[[example]]
name = "qrcode"
[[example]]
name = "reqwest"

[[bin]]
name = "dag"
path = "src/dag.rs"
[[bin]]
name = "dag_mut"
path = "src/dag_mut.rs"
[[bin]]
name = "size"
path = "src/size.rs"
[[bin]]
name = "map_mem"
path = "src/map_mem.rs"





[dependencies]
anyhow = "1.0.69"
clap = { version = "4", features = ["derive"] }
colored = "2.0.0"
jsonxf = "1.1.1"
syntect = "5.0.0"
thiserror = "1.0.39"
prost = "0.11.8"
prost-build = "0.11.8"
percent-encoding = "2.2.0"
axum = "0.6.10"
tokio = { version = "1.26.0", features = ["full"] }
polars = "0.27.2"
sysinfo = "0.28.3"
qrcode = "0.12"
image = "0.24"
reqwest = { version = "0.11.14", features = ["cookies"] }
regex = "1.7.2"
lazy_static = "1.4.0"
