[package]
name = "my-llm-project"
version = "0.1.0"
edition = "2021"

[[example]]
name = "prompt_template"
[[example]]
name = "seq_chain"
[[example]]
name = "map_reduce_chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
llm-chain = "0.12.3"
llm-chain-openai = "0.12.3"
tokio = { version = "1.29.1", features = ["full"] }
