[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
colored = "2.0.4"
glob = "0.3.1"
regex = "1.9.1"
thiserror = "1.0.44"
