[package]
name = "gpt_py"   # Python 模块需要用下划线
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"] # 使用 cdylib 类型

[dependencies]
gpt = { path = "../gpt" }                      # 引入 gpt
tokio = { version = "1", features = ["full"] }

[dependencies.pyo3] # 引入 pyo3
version = "0.18"
features = ["extension-module"]

[build-dependencies]
pyo3-build-config = "0.18"
