[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }
eventsource-stream = "0.2.3"
futures-util = "0.3.26"
tokio-test = { version = "0.4.2" }

[dependencies.reqwest]
version = "0.11.14"
features = ["json", "stream", "socks", "rustls-tls", "rustls-tls-native-roots"]
default-features = false
